alignment fixed, styling done

--- a/style.css
+++ b/style.css
@@ -1,51 +1,68 @@
 .main-container {
-
 }
 
 .container {
-    display: flex;
-    justify-content: space;
-    /* border: 1px solid black; */
-    background-color: blue;
-    color: white;
-    width: 800px;
+  display: flex;
+  justify-content: space;
+  /* border: 1px solid black; */
+  /* background-color: #00ffff; */
+  color: #00ffff;
+  width: 800px;
+  margin-left: 20px;
+  margin-top: 150px;
+  align-content: center;
+  text-align: right;
 }
 
 .container2 {
-    display: flex;
-    justify-content: flex-end;
-    /* border: 1px solid black; */
-    background-color: orange;
-    color: white;
-    width: 150px;
+  display: flex;
+  justify-content: flex-end;
+  /* border: 1px solid black; */
+  /* background-color: orange; */
+  color: #00ffff;
+  width: 150px;
+  /* margin-top: 100px; */
+  margin-left: 150px;
+  text-align: left;
 }
 
 input {
-    width: 250px;
-    background: transparent;
-    border: 0;
-    border-bottom: 3px solid #00FFFF;
-    outline: 0;
-    font-size: 1.4rem;
-    font-weight: 300;
-    color: darkgray;
-    /* z-index: 1; */
-    text-align: center;
+  width: 250px;
+  background: transparent;
+  border: 0;
+  border-bottom: 3px solid #00ffff;
+  outline: 0;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: darkgray;
+  text-align: center;
+  margin-top: 16px;
 }
 
-
+button {
+  margin-top: 5px;
+  padding: 5px;
+  width: 125px;
+  background: transparent;
+  border-radius: 8px;
+  color: #00ffff;
+  text-align: center;
+  border: 1px solid #00FFFF;
+  text-decoration: none;
+  font-size: 12px;
+}
 
 body {
-    background-image: url(https://images.unsplash.com/photo-1482112048165-dd23f81c367d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80);
-    font-family: sans-serif;
-    font-size: 20px;
+  background-image: url(https://images.unsplash.com/photo-1482112048165-dd23f81c367d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80);
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
 h1 {
-    color: #00FFFF;
+  color: #00ffff;
 }
 
 .search {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
